--- a/src/main/resources/assets/oxygen_exchange/lang/en_US.lang
+++ b/src/main/resources/assets/oxygen_exchange/lang/en_US.lang
@@ -12,7 +12,8 @@ oxygen_exchange.gui.exchange.confirmCallback.request=Are you sure?
 oxygen_exchange.gui.exchange.confirmed=Exchange confirmed
 oxygen_exchange.gui.exchange.notConfirmed=Exchange not confirmed
 
-oxygen_exchange.message.request.acceptedSender=Your exchange request accepted.
-oxygen_exchange.message.request.acceptedTarget=You accepted exchange request.
-oxygen_exchange.message.request.rejectedSender=Your exchange request rejected.
-oxygen_exchange.message.request.rejectedTarget=You rejected exchange request.
+oxygen_exchange.status.acceptedSender=Your exchange request accepted
+oxygen_exchange.status.acceptedTarget=You accepted exchange request
+oxygen_exchange.status.rejectedSender=Your exchange request rejected
+oxygen_exchange.status.rejectedTarget=You rejected exchange request
+oxygen_exchange.status.itemBlacklisted=Item blacklisted
