--- a/changelog.txt
+++ b/changelog.txt
@@ -1,16 +1,34 @@
+0.10.0b [2020-01-17]
++ Improved menu design.
++ Changed the chat command to send an exchange request. Now, to send a request, you need to aim the sight at
+player and use the command /oxygenc exchange -offer.
++ Added 1 second cooldown for sending packets - operations in the exchange menu.
++ Updated configuration options:
+ Server
+ - "exchange_request_expire_time_seconds" [int] - time of the request for exchange in seconds
+
++ Added privileges:
+ - "exchange:allowExchange" [id - 300, type - BOOLEAN] - the ability to send exchange requests. By default, any player can send requests.
+
++ Added client settings:
+ Interface
+ - menu alignment
+ - slot color
+ - color of the slot highlighting
+
 0.9.0b [2019-09-22]
-+Compatibility with Oxygen Core 0.9.
++ Compatibility with Oxygen Core 0.9.
 
 0.8.0b
-+Performance improvements.
++ Performance improvements.
 
 0.1.2a
-+Compatibility with Oxygen Core 0.7.0a.
-+Added command "/exchange <username>" for exchange request.
++ Compatibility with Oxygen Core 0.7.0a.
++ Added command "/exchange <username>" for exchange request.
 
 0.1.1a
-+Fixed wrong username displayed in exchange menu (for player who accepted exchange).
-+Added server side blocking for offer slots.
++ Fixed wrong username displayed in exchange menu (for player who accepted exchange).
++ Added server side blocking for offer slots.
 
 0.1.0a
-+Initial release.
++ Initial release.
