--- a/src/main/resources/assets/oxygen_exchange/lang/en_US.lang
+++ b/src/main/resources/assets/oxygen_exchange/lang/en_US.lang
@@ -1,12 +1,18 @@
 oxygen_exchange.gui.interaction.offerExchange=Offer Exchange
 
+oxygen_exchange.gui.settings.module.exchange=Exchange
+
+oxygen_exchange.gui.settings.option.alignmentExchangeMenu=Exchange Menu
+oxygen_exchange.gui.settings.option.slotsColor=Slots
+oxygen_exchange.gui.settings.tooltip.bottomLayer=Bottom Layer
+oxygen_exchange.gui.settings.tooltip.higlighting=Highlighting
+
 oxygen_exchange.request.exchange=%s offers you exchange.
 
 oxygen_exchange.gui.exchange.title=Exchange
 oxygen_exchange.gui.exchange.yourOffer=Your Offer
-oxygen_exchange.gui.exchange.playerOffer=%s Offer
-oxygen_exchange.gui.exchange.offerButton=Offer
-oxygen_exchange.gui.exchange.confirmCallback=Confirm Exchange
+oxygen_exchange.gui.exchange.playerOffer=%s's Offer
+oxygen_exchange.gui.exchange.callback.confirmExchange=Confirm Exchange
 oxygen_exchange.gui.exchange.confirmCallback.request=Are you sure?
 
 oxygen_exchange.gui.exchange.confirmed=Exchange confirmed
