--- a/src/main/resources/assets/oxygen_exchange/lang/ru_RU.lang
+++ b/src/main/resources/assets/oxygen_exchange/lang/ru_RU.lang
@@ -2,11 +2,15 @@ oxygen_exchange.gui.interaction.offerExchange=Предложить Обмен
 
 oxygen_exchange.request.exchange=%s предлагает вам обмен.
 
+oxygen_exchange.gui.settings.option.alignmentExchangeMenu=Меню Обмена
+oxygen_exchange.gui.settings.option.slotsColor=Слоты
+oxygen_exchange.gui.settings.tooltip.bottomLayer=Нижний Слой
+oxygen_exchange.gui.settings.tooltip.higlighting=Подсветка
+
 oxygen_exchange.gui.exchange.title=Обмен
 oxygen_exchange.gui.exchange.yourOffer=Ваше Предложение
 oxygen_exchange.gui.exchange.playerOffer=Предложение %s
-oxygen_exchange.gui.exchange.offerButton=Предложить
-oxygen_exchange.gui.exchange.confirmCallback=Подтверждение Обмена
+oxygen_exchange.gui.exchange.callback.confirmExchange=Подтверждение Обмена
 oxygen_exchange.gui.exchange.confirmCallback.request=Вы уверены?
 
 oxygen_exchange.gui.exchange.confirmed=Обмен принят
